--- a/pom.xml
+++ b/pom.xml
@@ -17,5 +17,10 @@
 	    <artifactId>langchain4j</artifactId>
 	    <version>0.22.0</version>
 	</dependency>
+	<dependency>
+		<groupId>com.datastax.oss</groupId>
+		<artifactId>java-driver-core</artifactId>
+		<version>4.17.0</version>
+	</dependency>
   </dependencies>
 </project>
